kube-manifests.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: wg-controller
  name: wg-controller
  namespace: default
spec:
  replicas: 1
  serviceName: wg-controller
  selector:
    matchLabels:
      app: wg-controller
  template:
    metadata:
      labels:
        app: wg-controller
    spec:
      securityContext:
        sysctls:
          - name: net.ipv4.conf.all.src_valid_mark
            value: "1"
          - name: net.ipv4.ip_forward
            value: "1"
      containers:
        - name: wg-controller
          image: ghcr.io/wg-controller/wg-controller:latest
          ports:
            - containerPort: 8081 # API
              protocol: TCP
            - containerPort: 51820 # WireGuard
              hostPort: 51820
              protocol: UDP
          securityContext:
            runAsUser: 0
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
            privileged: true
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /data
              name: wg-controller-data
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
      restartPolicy: Always
      volumes:
        - name: wg-controller-data
          persistentVolumeClaim:
            claimName: wg-controller-data

---
apiVersion: v1
kind: Service
metadata:
  name: wg-controller
  namespace: default
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: wg-controller

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wg-controller-ui
  name: wg-controller-ui
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wg-controller-ui
  template:
    metadata:
      labels:
        app: wg-controller-ui
    spec:
      containers:
        - name: wg-controller-ui
          image: ghcr.io/wg-controller/wg-controller-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "500Mi"
              cpu: "1"
      imagePullSecrets:
        - name: ghcr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: wg-controller-ui
  namespace: default
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: wg-controller-ui

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wg-controller-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/issuer: "example-acme-issuer"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: wg-controller-ui
      port:
        number: 8080
  tls:
    - hosts:
        - wg.example.co.nz
      secretName: wg.example.co.nz
  rules:
    - host: "wg.example.co.nz"
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: wg-controller
                port:
                  number: 8081
